fix: home scrollbar colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #6b7280;
+  background: #d1d5db;
   border-radius: 10px;
 }
 
